--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/main-style.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/main-style.css
@@ -15,21 +15,80 @@ body {
   margin: 0 auto;
 }
 
-.nav-menu {
+.main-content {
+  padding: 50px 0 0;
+}
+
+.header__nav {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   margin: 0;
-  padding: 0;
-  max-width: 680px;
-  height: 95px;
+  padding: 30px 0 0;
+  height: 100vh;
+  width: 100%;
+  background-color: var(--theme-bg-color-trans);
   font-weight: 400;
+}
+
+.hide {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.header-menu__switcher {
+  z-index: 2;
+  padding: 0;
+  margin: 0 0 0 10px;
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #FD665E;
+  border: none;
+  border-radius: 13px;
+  color: #FFF;
+  cursor: pointer;
+}
+
+.switcher__cross-line {
+  display: inline-block;
+  margin: -1px 0;
+  width: 20px;
+  height: 2px;
+  background-color: #FFF;
+  transition: all .7s ease;
+}
+
+.switcher__cross-line:nth-child(even) {
+  transform: rotate(90deg);
+}
+
+.switcher__cross-lines_close {
+  margin: -1px 0;
+}
+
+.switcher__cross-lines_close:nth-child(odd) {
+  transform: rotate(45deg);
+}
+
+.switcher__cross-lines_close:nth-child(even) {
+  transform: rotate(-45deg);
 }
 
 .list__item {
   box-sizing: border-box;
   list-style: none;
-  padding: 5px 25px;
+  padding: 5px 15px;
 }
 
 .advantages-list__item-icon {
@@ -82,7 +141,13 @@ body {
 }
 
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   height: 95px;
+  max-width: 1470px;
+  margin: auto;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -90,13 +155,14 @@ body {
 
 .header__nav {
   box-sizing: border-box;
-  width: 100%;
 }
 
 .nav-menu__list {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+  flex-flow: column;
   margin: 0;
 }
 
@@ -342,4 +408,29 @@ body {
 
 .header__theme-switcher:hover {
   border-color: #FD665E;
+}
+
+@media only screen and (min-width: 992px) {
+
+  .header-menu__switcher {
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  .nav-menu {
+    position: relative;
+    align-items: center;
+    padding: 0;
+    height: 95px;
+    max-width: 700px;
+    width: auto;
+    background-color: transparent;
+  }
+
+  .nav-menu__list {
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-flow: row;
+  }
 }
