--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/styles.css
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/styles.css
@@ -314,12 +314,11 @@ body {
 .features-section__list-item {
   display: flex;
   margin-bottom: 3rem;
-  align-items: flex-start;
 }
 
 .features-section__icon {
-  height: 50px;
-  width: 100px;
+  height: 60px;
+  width: 60px;
   margin-right: 2rem;
   fill: none;
 }
@@ -327,13 +326,16 @@ body {
 .features-section__icon-layer-1 {
   stroke: var(--text-color);
   stroke-width: 4;
-  fill: none;
 }
 
 .features-section__icon-layer-2 {
   stroke: var(--accent-color);
   stroke-width: 4;
-  fill: none;
+}
+
+.features-section__icon-layer-2--center {
+  fill: var(--accent-color);
+  stroke-width: 4;
 }
 
 .features-section__sub-title {
@@ -647,6 +649,7 @@ body {
 
   .features-section__icon {
     margin-bottom: 1rem;
+    margin-right: 0;
   }
 
   .footer-section__list {
