--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/main-style.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/main-style.css
@@ -20,29 +20,23 @@ body {
 }
 
 .header__nav {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  z-index: 1;
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
   margin: 0;
   padding: 30px 0 0;
-  height: 100vh;
-  width: 100%;
-  background-color: var(--theme-bg-color-trans);
   font-weight: 400;
 }
 
-.hide {
+.list--visibility-toggle {
   visibility: hidden;
   opacity: 0;
 }
 
 .header-menu__switcher {
+  position: absolute;
+  top: 25px;
+  right: 280px;
   z-index: 2;
   padding: 0;
   margin: 0 0 0 10px;
@@ -86,9 +80,13 @@ body {
 }
 
 .list__item {
+  width: 360px;
+  text-align: center;
+  font-size: 36px;
+  line-height: 42px;
   box-sizing: border-box;
   list-style: none;
-  padding: 5px 15px;
+  padding: 25px 15px;
 }
 
 .advantages-list__item-icon {
@@ -157,13 +155,30 @@ body {
   box-sizing: border-box;
 }
 
-.nav-menu__list {
+.header__nav .nav-menu__list {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+  height: 100vh;
+  width: 100%;
+  background-color: var(--theme-bg-color-trans);
+  padding-top: 50px;
+}
+
+.footer .nav-menu__list {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
   flex-flow: column;
   margin: 0;
+}
+
+.footer .nav-menu__list--mobile-hide {
+  display: none;
 }
 
 .header__control-buttons {
@@ -365,7 +380,7 @@ body {
 }
 
 .footer__logo {
-  padding-left: 44px;
+  padding-right: 44px;
 }
 
 @media (max-width: 998px) {
@@ -403,14 +418,20 @@ body {
 
 .list__link:hover,
 .list__link:focus {
+  background-color: var(--theme-bg-color);
   color: #FD665E;
+}
+
+.list__item:hover,
+.list__item:focus {
+  background-color: var(--theme-bg-color);
 }
 
 .header__theme-switcher:hover {
   border-color: #FD665E;
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 1024px) {
 
   .header-menu__switcher {
     visibility: hidden;
@@ -427,10 +448,31 @@ body {
     background-color: transparent;
   }
 
-  .nav-menu__list {
+  .header__nav .nav-menu__list, .footer__nav .nav-menu__list {
+    position: inherit;
+    height: 95px;
+    width: auto;
+    background-color: transparent;
+    padding-top: 0;
     justify-content: space-between;
     align-items: center;
+    display: flex;
     flex-wrap: wrap;
     flex-flow: row;
+  }
+
+  .list__item {
+    width: auto;
+    font-size: inherit;
+    line-height: inherit;
+  }
+
+  .list--visibility-toggle {
+    visibility: visible;
+    opacity: inherit;
+  }
+
+  .nav-menu__list--mobile-hide {
+    display: flex;
   }
 }
