--- a/homeworks/nikolay.krasniuk_Kingstar22/8-css-variables/adaptive.css
+++ b/homeworks/nikolay.krasniuk_Kingstar22/8-css-variables/adaptive.css
@@ -99,8 +99,17 @@
     overflow: hidden;
   }
 
+  .header {
+    padding-left: 0;
+  }
+
+  .header__logo {
+    padding-left: 25px;
+  }
+
   .header__burger {
     display: block;
+    margin-left: 15px;
     position: relative;
     width: 20px;
     height: 20px;
@@ -114,7 +123,7 @@
     width: 100%;
     height: 2px;
     transition: all .3s cubic-bezier(.76,.015,.41,1);
-    top: -1px;
+    top: 3px;
   }
 
   .header__burger::after {
@@ -124,7 +133,7 @@
     width: 100%;
     height: 2px;
     transition: all .3s cubic-bezier(.76,.015,.41,1);
-    bottom: 7px;
+    bottom: 3px;
   }
 
   .header__burger-line {
@@ -132,7 +141,7 @@
     background-color: var(--icon-color-burger);
     width: 100%;
     height: 2px;
-    top: 5px;
+    top: 9px;
     transition: all .3s cubic-bezier(.76,.015,.41,1);
   }
 
@@ -186,5 +195,189 @@
 
   .header__menu-active {
     top: 0;
+  }
+
+  .dream__title {
+    text-align: center;
+  }
+
+  .dream__desc-text {
+    width: 175px;
+    line-height: 20px;
+  }
+
+  .archmove__content {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25px;
+  }
+
+  .archmove__content-picture {
+    max-width: 380px;
+    max-height: 435px;
+  }
+
+  .archmove__advantages {
+    margin-left: 0;
+  }
+
+  .archmove__item-content {
+    width: 315px;
+    margin-left: 20px;
+  }
+
+  .archmove__advantages {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .archmove__advantages-btn {
+    margin-top: 30px;
+    margin-left: 0;
+  }
+
+  .room__title {
+    text-align: center;
+  }
+
+  .archmove__title {
+    text-align: center;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 576px) {
+
+  .header {
+    padding: 20px 20px 20px 0;
+  }
+
+  .header__logo {
+    padding-left: 20px;
+  }
+
+  .header__btns-in, .header__btns-up {
+    width: 50px;
+    padding: 4px;
+    font-size: 12px;
+    height: 30px;
+  }
+
+  .header__btns-theme {
+    width: 47px;
+  }
+
+  .dream {
+    padding: 45px 20px;
+  }
+
+  .dream__content {
+    flex-direction: column-reverse;
+  }
+
+  .dream__desc {
+    margin-top: 30px;
+    margin-right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .dream__desc-text {
+    width: 100%;
+  }
+
+  .dream__desc-btn {
+    margin-top: 25px;
+  }
+
+  .room__gallery {
+    flex-wrap: wrap;
+    margin-top: 25px;
+    justify-content: space-around;
+    gap: 20px;
+  }
+
+  .room__gallery-picture {
+    margin-right: 0;
+    max-width: 300px;
+    max-height: 429px;
+  }
+
+  .archmove {
+    padding: 0 20px 45px;
+  }
+
+  .archmove__content {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25px;
+  }
+
+  .archmove__content-picture {
+    max-width: 350px;
+    max-height: 400px;
+  }
+
+  .archmove__item-content {
+    width: 210px;
+  }
+
+  .archmove__advantages-btn {
+    margin-top: 25px;
+  }
+
+  .project {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 0 20px 45px ;
+  }
+
+  .project__content-title {
+    text-align: center;
+  }
+
+  .project__picture {
+    margin-top: 25px;
+    max-width: 430px;
+    max-height: 600px;
+  }
+
+  .project__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+    margin-left: 0;
+  }
+
+  .project__content-btn {
+    margin-top: 25px;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+
+  .footer__menu {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer__item {
+    margin-top: 10px;
+    margin-left: 0;
+  }
+
+  .footer__item:first-child {
+    margin-top: 0;
+  }
+
+  .footer__logo {
+    margin-top: 10px;
   }
 }
