--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/8-css-variables/style.css
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/8-css-variables/style.css
@@ -1,44 +1,40 @@
-:root {
+.body {
   --button-color: rgba(253, 102, 94, 1);
   --background-color: rgba(255, 255, 255, 1);
   --header-and-footer-text-color: rgba(88, 88, 88, 1);
   --text-and-advantages-svg-stroke-color: rgba(0, 0, 0, 1);
   --border-bottom-color: rgba(240, 240, 240, 1);
   --background-gradient: linear-gradient(180deg, rgba(249, 249, 249, 1) 22.12%, rgba(249, 249, 249, 0) 100%);
-}
 
-.body {
   margin: 0;
 }
 
-.ul,
-.li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.body[data-theme-night] {
+  --button-color: rgba(253, 126, 119, 1);
+  --background-color: rgba(13, 13, 13, 1);
+  --header-and-footer-text-color: rgba(255, 255, 255, 1);
+  --text-and-advantages-svg-stroke-color: rgba(255, 255, 255, 1);
+  --border-bottom-color: rgba(240, 240, 240, 1);
+  --background-gradient: linear-gradient(180deg, rgba(13, 13, 13, 1) 22.12%, rgba(249, 249, 249, 0) 100%);
 }
 
 .a {
   text-decoration: none;
 }
 
-.h1,
 .h2 {
-  padding: 0;
-  margin: 0;
   font-family: "Merriweather", "-apple-system", "BlinkMacSystemFont", "Segoe UI",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
-.h2 {
   font-style: normal;
   font-weight: 900;
   font-size: 48px;
   line-height: 60px;
+  padding: 0;
+  margin: 0;
   color: var(--header-and-footer-text-color);
 }
 
-.h3 {
+.advantages__title {
   padding: 0;
   margin: 0;
   font-family: "Roboto", "-apple-system", "BlinkMacSystemFont", "Segoe UI",
@@ -105,6 +101,8 @@
   color: var(--background-color);
   background-color: var(--button-color);
   border-radius: 4px;
+  height: 56px;
+  max-width: 205px;
 }
 
 .header {
@@ -131,6 +129,9 @@
   flex-direction: row;
   justify-content: flex-start;
   column-gap: 5.6%;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .menu__item {
@@ -185,6 +186,10 @@
 
 .dream-house__title {
   width: 100%;
+  padding: 0;
+  margin: 0;
+  font-family: "Merriweather", "-apple-system", "BlinkMacSystemFont", "Segoe UI",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-weight: 700;
   font-style: normal;
   font-size: 112px;
@@ -210,7 +215,6 @@
 
 .dream-house__button {
   width: 62%;
-  height: 56px;
   margin-top: 48px;
 }
 
@@ -268,17 +272,12 @@
 }
 
 .archmove__picture {
-  width: 48.25%;
-  height: 100%;
+  max-width: 48.25%;
 }
 
 .archmove__advantages {
-  width: 40.5%;
-  margin-left: 11.36%;
-  margin-top: 40px;
   display: flex;
   flex-direction: column;
-  row-gap: 48px;
 }
 
 .advantages__one,
@@ -287,12 +286,13 @@
   display: flex;
   flex-direction: row;
   column-gap: 39px;
+  margin-top: 48px;
+  margin-left: 155px;
 }
 
-.advantages__two,
-.advantages__three {
-  margin-left: 4px;
-  column-gap: 43px;
+.advantages__one {
+  column-gap: 35px;
+  margin-left: 150px;
 }
 
 .advantages-item__container {
@@ -302,8 +302,8 @@
 }
 
 .advantages__consultation {
-  align-self: center;
-  width: 45.7%;
+  margin-top: 72px;
+  margin-left: 238px;
 }
 
 .footer {
@@ -365,11 +365,6 @@
   color: var(--button-color);
 }
 
-.realize-project__button {
-  width: 205px;
-  height: 56px;
-}
-
 .footer__about-us {
   height: 200px;
   display: flex;
@@ -382,6 +377,8 @@
   width: 80%;
   display: flex;
   column-gap: 3.33%;
+  list-style: none;
+  padding: 0;
 }
 
 .about-us__item {
@@ -397,9 +394,7 @@
   margin-right: 11.45%;
 }
 
-
 @media (max-width: 1023px) {
-
 
   .container {
     font-size: 32px;
@@ -409,7 +404,9 @@
   .button {
     width: 70%;
     height: 70px;
-    font-size: 2em;
+    max-width: 70%;
+    max-height: 70px;
+    font-size: 1.5em;
   }
 
   .header {
@@ -423,14 +420,17 @@
 
   .header__menu {
     width: 90%;
+    margin-top: 1.5em;
   }
 
   .menu {
-    margin-top: .8em;
     flex-direction: column;
-    row-gap: .8em;
+    row-gap: 1em;
     text-align: center;
     margin-bottom: 1em;
+    list-style: none;
+    margin: 0;
+    padding: 0;
   }
 
   .menu__item {
@@ -438,18 +438,16 @@
   }
 
   .header__button {
-    margin-top: 1em;
+    margin-top: 3em;
   }
 
   .header__sign-in {
     margin-top: 1em;
     width: 100%;
-    height: 70px;
-    font-size: 2em;
+    font-size: 1.5em;
   }
 
   .header__sign-up {
-    width: 63%;
     margin-top: 1em;
   }
 
@@ -468,7 +466,6 @@
 
   .dream-house__title {
     width: 100%;
-    margin: 0;
     text-align: center;
   }
 
@@ -532,20 +529,22 @@
   }
 
   .archmove__picture {
-    width: 100%;
+    max-width: 100%;
   }
 
-  .archmove__advantages {
-    width: 100%;
-    margin: 0;
-    row-gap: 1em;
+  .advantages__one,
+  .advantages__two,
+  .advantages__three {
+    flex-direction: row;
+    column-gap: 39px;
+    margin-top: 2em;
+    margin-left: 0;
   }
 
   .advantages__consultation {
-    width: 70%;
-    font-size: 2em;
-    height: 170px;
-    line-height: 70px;
+    align-self: center;
+    margin-top: 2em;
+    margin-left: 0;
   }
 
   .footer {
@@ -570,12 +569,6 @@
     text-align: center;
   }
 
-  .realize-project__button {
-    width: 70%;
-    height: 56px;
-    font-size: 2em;
-  }
-
   .footer__about-us {
     width: 90%;
     flex-direction: column;
@@ -583,11 +576,12 @@
   }
 
   .about-us__container {
-    margin: 0;
     width: 100%;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    list-style: none;
+    padding: 0;
   }
 
   .about-us__item {
