--- a/homeworks/nikolay.krasniuk_Kingstar22/8-css-variables/style.css
+++ b/homeworks/nikolay.krasniuk_Kingstar22/8-css-variables/style.css
@@ -11,12 +11,16 @@ body {
 }
 
 :root {
+  --background-color-btn-active: #FD665E;
+  --foreground-color-btn-active: #585858;
   --background-color-btn: #FD665E;
   --foreground-color-btn: #FFF;
   --color-title-last-word: #FD665E;
   --color-text: #000;
   --color-text-menu: #585858;
+  --color-text-menu-active: #FD665E;
   --foreground-color-btn-in: #585858;
+  --foreground-color-btn-in-active: #FD665E;
   --overlay-color-first: #F9F9F9;
   --overlay-color-second: rgba(249, 249, 249, 0);
   --rectangle-color: #F0F0F0;
@@ -29,6 +33,7 @@ body {
 }
 
 .dark-theme {
+  --foreground-color-btn-active: #FFF;
   --foreground-color-btn: #000;
   --background-color-body: #000;
   --color-text-menu: #FFF;
@@ -72,6 +77,11 @@ a {
   cursor: pointer;
 }
 
+.btn:hover {
+  color: var(--foreground-color-btn-active) ;
+}
+
+
 .header {
   padding: 24px 25px;
   display: flex;
@@ -105,6 +115,10 @@ a {
   font-weight: 400;
 }
 
+.header__item-link:hover {
+  color: var(--color-text-menu-active);
+}
+
 .header__btns {
   display: flex;
   align-items: center;
@@ -125,6 +139,10 @@ a {
 .header__btns-in {
   color: var(--foreground-color-btn-in);
   background: none;
+}
+
+.header__btns-in:hover {
+  color: var(--foreground-color-btn-in-active);
 }
 
 .dream {
@@ -360,3 +378,8 @@ a {
   font-size: 12px;
   color: var(--color-text-menu);
 }
+
+.footer__item-link:hover {
+  color: var(--color-text-menu-active);
+}
+
